force-app/main/default/objects/Item_ordem_servico__c/Item_ordem_servico__c.object-meta.xml
<CustomObject>
    <label>Item da ordem de serviço</label>
    <nameField>
        <label>Nome do Item da ordem de serviço</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens da ordem de serviço</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>