force-app/main/default/objects/Item_ordem_servico__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o registro está ativo ou inativo</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>