force-app/main/default/objects/Item_ordem_servico__c/fields/Codigo_externo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_externo__c</fullName>
    <externalId>true</externalId>
    <label>Código externo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>