force-app/main/default/objects/Item_ordem_servico__c/fields/Defeito_alegado__c.field-meta.xml
<CustomField>
    <fullName>Defeito_alegado__c</fullName>
    <description>Defeito alegado pelo cliente</description>
    <label>Defeito alegado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>