force-app/main/default/objects/Item_ordem_servico__c/fields/Defeito_analisado__c.field-meta.xml
<CustomField>
    <fullName>Defeito_analisado__c</fullName>
    <description>Defeito analisado pelo técnico</description>
    <label>Defeito analisado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>