force-app/main/default/objects/Item_ordem_servico__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Acessórios</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Equipamento</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Kit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>