force-app/main/default/objects/Item_ordem_servico__c/fields/Ordem_servico__c.field-meta.xml
<CustomField>
    <fullName>Ordem_servico__c</fullName>
    <label>Ordem de serviço</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Itens da ordem de serviço</relationshipLabel>
    <relationshipName>Itens_ordem_servico</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>