force-app/main/default/objects/Item_ordem_servico__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
                <label>Cancelado</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Concluído</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Autorizado</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Não executado</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Não autorizado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>