force-app/main/default/objects/Item_ordem_servico__c/fields/Tipo_OS__c.field-meta.xml
<CustomField>
    <fullName>Tipo_OS__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tipo de OS</label>
    <referenceTo>Tipo_OS__c</referenceTo>
    <relationshipLabel>Itens da ordem de serviço</relationshipLabel>
    <relationshipName>Itens_ordem_servico</relationshipName>
    <type>Lookup</type>
</CustomField>